# predicate-calculation-engine

./: .gitignore  Cargo.toml  LICENSE  README-zh.md  README.md
docs/: 01-absence-timeout.md  02-same-frame-contention.md  03-frame-aggregation.md  04-dynamic-subscription.md  05-cooldown-state-machine.md  06-event-materialization.md  07-global-order-topk.md  08-chain-reaction.md  09-buff-debuff-ledger.md  10-damage-pipeline.md  11-immunity-invincibility.md  12-limited-charges.md  13-aggro-taunt.md  14-combo-cancel-buffer.md  15-summon-attribution.md  16-xp-loot-split.md  17-knockback-compose.md  18-cast-interrupt.md  19-atomic-consume.md  20-projectile.md  21-linked-life.md  22-time-dilation.md  23-symmetric-trade.md  PCE.md  README.md  design-kernel-ir-seam.md
docs-zh/: 01-absence-timeout.md  02-same-frame-contention.md  03-frame-aggregation.md  04-dynamic-subscription.md  05-cooldown-state-machine.md  06-event-materialization.md  07-global-order-topk.md  08-chain-reaction.md  09-buff-debuff-ledger.md  10-damage-pipeline.md  11-immunity-invincibility.md  12-limited-charges.md  13-aggro-taunt.md  14-combo-cancel-buffer.md  15-summon-attribution.md  16-xp-loot-split.md  17-knockback-compose.md  18-cast-interrupt.md  19-atomic-consume.md  20-projectile.md  21-linked-life.md  22-time-dilation.md  23-symmetric-trade.md  PCE文档.md  README.md  design-kernel-ir-seam.md  original-api-shape.rs
examples/: demo.rs  frame_rate_damping.rs  render_culling.rs  render_demo.rs  render_local.rs  render_staging.rs
src/: calculation.rs  column.rs  entity.rs  genslots.rs  lib.rs  main.rs  (+3 more)
(+47 files in other folders)
